fix: scrollbars, scrollable contact list, btns in header and banner, welcome block, modals with members, etc

--- a/src/dotnet/Chat.UI.Blazor/Components/AccountModal/account-modal.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/AccountModal/account-modal.css
@@ -137,3 +137,6 @@ body.hoverable .author-modal .tile:hover {
 .author-modal .dialog-buttons {
     @apply mt-2;
 }
+.start-chat-btn p {
+    @apply truncate;
+}
